# rquest

./: .gitignore  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml
.github/: FUNDING.yml  dependabot.yml
.github/compilation-guide/: build.yml
.github/workflows/: ci.yml  release.yml  style.yml
examples/: base_url.rs  blocking.rs  cert_store.rs  chrome.rs  client.rs  client_chain.rs  connect_via_lower_priority_tokio_runtime.rs  cookie_store_with_request.rs  create_time.rs  emulation.rs  emulation_context.rs  emulation_firefox.rs  emulation_option.rs  emulation_provider.rs  emulation_twitter.rs  form.rs  headers_order.rs  hickory_dns.rs  http1_case_sensitive_headers.rs  http1_recv_case_sensitive_headers.rs  http1_send_case_sensitive_headers.rs  http1_websocket.rs  http2_websocket.rs  impersonate.rs  impersonate_builder.rs  impersonate_context.rs  impersonate_option.rs  impersonate_psk.rs  impersonate_settings.rs  impersonate_skip_headers.rs  impersonate_template.rs  impersonate_with_headers.rs  impersonate_without_headers.rs  json_dynamic.rs  json_typed.rs  keylog.rs  pre_configured_tls.rs  psk_impersonate.rs  redirect_via_proxy.rs  redirect_with_request.rs  (+30 more)
src/: client.rs  config.rs  connect.rs  cookie.rs  error.rs  ext.rs  hash.rs  header.rs  http2.rs  into_uri.rs  into_url.rs  lib.rs  macros.rs  proxy.rs  redirect.rs  response.rs  retry.rs  sync.rs  tls.rs  trace.rs  util.rs
src/async_impl/: body.rs  client.rs  decoder.rs  mod.rs  multipart.rs  request.rs  response.rs  websocket.rs
src/async_impl/websocket/: json.rs  message.rs
src/blocking/: body.rs  client.rs  mod.rs  multipart.rs  request.rs  response.rs
src/browser/: mod.rs
src/browser/chrome/: mod.rs
src/client/: body.rs  client.rs  conn.rs  context.rs  core.rs  decoder.rs  emulation.rs  http.rs  mod.rs  multipart.rs  request.rs  response.rs  upgrade.rs  ws.rs
src/client/client/: aliases.rs  future.rs  macros.rs  mod.rs  service.rs  types.rs
src/client/conf/: http2.rs  mod.rs
src/client/config/: http1.rs  http2.rs
src/client/conn/: conn.rs  connector.rs  http.rs  proxy.rs  verbose.rs
src/client/core/: body.rs  bounds.rs  common.rs  connect.rs  dispatch.rs  ext.rs  http1.rs  http2.rs  options.rs  proto.rs  rt.rs  upgrade.rs
src/client/emulation/: chrome.rs  firefox.rs  macros.rs  mod.rs  okhttp.rs  safari.rs
src/client/http/: aliases.rs  client.rs  connect.rs  future.rs  mod.rs  service.rs  types.rs
src/client/layer/: config.rs  cookie.rs  decoder.rs  redirect.rs  retry.rs  timeout.rs
src/client/middleware/: mod.rs
src/client/websocket/: json.rs  message.rs  mod.rs
src/client/ws/: compat.rs  json.rs  message.rs  mod.rs
src/conf/: http1.rs
src/core/: error.rs  headers.rs  map.rs  mod.rs  upgrade.rs
src/core/body/: incoming.rs  length.rs  mod.rs
src/core/client/: bounds.rs  dispatch.rs  dst.rs  future.rs  mod.rs  network.rs  pool.rs  request.rs  upgrade.rs
src/core/collections/: memo.rs  mod.rs
src/core/common/: either.rs  exec.rs  lazy.rs  mod.rs  rewind.rs  task.rs  time.rs  timer.rs  watch.rs
src/core/config/: http1.rs  http2.rs
src/core/ext/: config.rs  h1_reason_phrase.rs  header.rs  mod.rs
src/core/header/: map.rs  mod.rs  name.rs
src/core/proto/: headers.rs  mod.rs
src/core/rt/: bounds.rs  io.rs  mod.rs  timer.rs  tokio.rs
src/core/service/: mod.rs  oneshot.rs
src/dns/: gai.rs  hickory.rs  mod.rs  resolve.rs
src/hash/: memo.rs  mod.rs
src/imp/: chrome.rs  firefox.rs  macros.rs  mod.rs  okhttp.rs  safari.rs
src/impersonate/: curves.rs  extension.rs  mod.rs  profile.rs
src/impersonate/chrome/: mod.rs  v100.rs  v101.rs  v104.rs  v105.rs  v106.rs  v107.rs  v108.rs  v109.rs  v114.rs  v116.rs  v117.rs  v118.rs  v119.rs  v120.rs  v123.rs  v124.rs  v126.rs  v127.rs  v99.rs
src/impersonate/edge/: edge101.rs  edge122.rs  edge127.rs  edge99.rs  mod.rs
src/impersonate/okhttp/: mod.rs  okhttp3_11.rs  okhttp3_13.rs  okhttp3_14.rs  okhttp3_9.rs  okhttp4_10.rs  okhttp4_9.rs  okhttp5.rs
src/impersonate/profile/: mod.rs
src/impersonate/safari/: mod.rs  safari15_3.rs  safari15_5.rs  safari15_6_1.rs  safari16.rs  safari16_5.rs  safari17_0.rs  safari17_2_1.rs  safari17_4_1.rs  safari17_5.rs  safari_ios_16_5.rs  safari_ios_17_2.rs  safari_ios_17_4_1.rs
src/mimic/: chrome.rs  firefox.rs  macros.rs  mod.rs  okhttp.rs  safari.rs
src/proxy/: mac.rs  matcher.rs  mod.rs  uds.rs  win.rs
src/tls/: builder.rs  cert_compression.rs  conf.rs  config.rs  conn.rs  error.rs  ext.rs  extension.rs  macros.rs  mod.rs  options.rs  profile.rs  settings.rs  types.rs  x509.rs
src/tls/cert/: load.rs  mod.rs  store.rs
src/tls/certs/: load.rs  mod.rs  store.rs
src/tls/chrome/: v100.rs  v101.rs  v104.rs  v105.rs  v106.rs  v107.rs  v108.rs  v109.rs  v114.rs  v116.rs  v117.rs  v118.rs  v119.rs  v120.rs  v123.rs  v124.rs  v126.rs  v127.rs
src/tls/conn/: boring.rs  cache.rs  cert_compression.rs  ext.rs  layer.rs  macros.rs  mod.rs  service.rs
src/tls/connect/: cache.rs
src/tls/connector/: mod.rs
src/tls/edge/: edge101.rs  edge122.rs  edge127.rs  edge99.rs
src/tls/ext/: cert_compression.rs  cert_load.rs  mod.rs
src/tls/extension/: cert_compression.rs  cert_load.rs  mod.rs
src/tls/impersonate/: chrome.rs  edge.rs  firefox.rs  http2.rs  macros.rs  mod.rs  okhttp.rs  safari.rs  tls.rs
src/tls/keylog/: handle.rs  mod.rs
src/tls/mimic/: chrome.rs  firefox.rs  macros.rs  mod.rs  okhttp.rs  safari.rs
src/tls/okhttp/: okhttp3_11.rs  okhttp3_13.rs  okhttp3_14.rs  okhttp3_9.rs  okhttp4_10.rs  okhttp4_9.rs  okhttp5.rs
src/tls/profile/: mod.rs
src/tls/safari/: mod.rs  safari15_3.rs  safari15_5.rs  (+10 more)
src/util/: ext.rs  mod.rs
src/wasm/: client.rs  request.rs
tests/: badssl.rs  blocking.rs  brotli.rs  client.rs  client_update.rs  connector_layers.rs  cookie.rs  deflate.rs  emulation.rs  gzip.rs  layers.rs  multipart.rs  proxy.rs  redirect.rs  retry.rs  timeouts.rs  unix_socket.rs  upgrade.rs  wasm_simple.rs  zstd.rs
tests/certs/: badssl.pem
tests/support/: delay_layer.rs  delay_server.rs  error.rs  layer.rs  mod.rs  server.rs
(+353 files in other folders)
