[package]
name = "wreq"
version = "6.0.0-rc.7"
description = "An ergonomic Rust HTTP Client with TLS fingerprint"
keywords = ["http", "client", "websocket", "ja3", "ja4"]
categories = ["web-programming::http-client"]
repository = "https://github.com/0x676e67/wreq"
documentation = "https://docs.rs/wreq"
authors = ["0x676e67 <gngppz@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["webpki-roots", "charset", "system-proxy"]

# Enable support for decoding text.
charset = ["dep:encoding_rs", "dep:mime"]

# Enable cookies store support.
cookies = ["dep:cookie_crate", "dep:cookie_store"]

# Enable gzip compression support.
gzip = ["tower-http/decompression-gzip"]

# Enable Brotli compression support.
brotli = ["tower-http/decompression-br"]

# Enable Zstandard compression support.
zstd = ["tower-http/decompression-zstd"]

# Enable deflate compression support.
deflate = ["tower-http/decompression-deflate"]

# Enable JSON support.
json = ["dep:serde_json"]

# Enable multipart/form-data support.
multipart = ["dep:mime_guess", "dep:sync_wrapper"]

# Enable hickory DNS resolver.
hickory-dns = ["dep:hickory-resolver"]

# Enable streaming support.
stream = ["tokio/fs", "dep:tokio-util", "dep:sync_wrapper"]

# Enable SOCKS proxy support.
socks = ["dep:tokio-socks"]

# Enable WebSocket support.
ws = ["dep:async-tungstenite", "futures-util/std", "futures-util/io"]

# Enable webpki-roots for TLS certificate validation.
webpki-roots = ["dep:webpki-root-certs"]

# Use the system's proxy configuration.
system-proxy = ["dep:system-configuration", "dep:windows-registry"]

# Enable tracing logging.
tracing = ["http2/tracing", "dep:tracing"]

[dependencies]
base64 = "0.22"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
percent-encoding = "2.3.1"
tower = { version = "0.5.2", default-features = false, features = [
    "timeout",
    "util",
    "retry",
] }
bytes = "1.10.1"
http = "1.3.1"
http2 = { version = "0.5.6", features = ["unstable"] }
httparse = "1.10.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
futures-channel = "0.3.31"
futures-util = { version = "0.3.31", default-features = false }
pin-project-lite = "0.2.16"
smallvec = { version = "1.15.1", features = ["const_generics", "const_new"] }
want = "0.3.1"
socket2 = { version = "0.6.0", features = ["all"] }
ipnet = "2.11.0"
schnellru = { version = "0.2.4", default-features = false }
ahash = { version = "0.8.12", default-features = false }

## runtime
tokio = { version = "1.47.0", default-features = false, features = [
    "net",
    "time",
    "rt",
] }

## tls
boring2 = { version = "5.0.0-alpha.4", features = ["pq-experimental"] }
tokio-boring2 = { version = "5.0.0-alpha.4", features = ["pq-experimental"] }
brotli = "8.0.1"
flate2 = "1.1.2"
zstd = "0.13.3"

# Optional deps...

## json
serde_json = { version = "1.0", optional = true }

## multipart
mime_guess = { version = "2.0", default-features = false, optional = true }

## charset
encoding_rs = { version = "0.8", optional = true }
mime = { version = "0.3.17", optional = true }

## sync wrapper
sync_wrapper = { version = "1.0.2", features = ["futures"], optional = true }

## webpki root certs
webpki-root-certs = { version = "1.0.2", optional = true }

## cookies
cookie_crate = { version = "0.18", package = "cookie", optional = true }
cookie_store = { version = "0.22", optional = true }

## tower http
tower-http = { version = "0.6.6", default-features = false, optional = true }

## tokio util
tokio-util = { version = "0.7.15", default-features = false, optional = true }

## socks
tokio-socks = { version = "0.5.2", optional = true }

## websocket
async-tungstenite = { version = "0.30.0", optional = true }

## hickory-dns
hickory-resolver = { version = "0.25.2", optional = true }

## tracing
tracing = { version = "0.1", default-features = false, features = [
    "std",
], optional = true }

## windows system proxy
[target.'cfg(windows)'.dependencies]
windows-registry = { version = "0.5.2", optional = true }

## macOS system proxy
[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = { version = "0.6.1", optional = true }

## interface binding
[target.'cfg(any(target_os = "ios", target_os = "visionos", target_os = "macos", target_os = "tvos", target_os = "watchos", target = "illumos", target = "solaris"))'.dependencies]
libc = "0.2.173"

[dev-dependencies]
hyper = { version = "1.1.0", default-features = false, features = [
    "http1",
    "http2",
    "server",
] }
hyper-util = { version = "0.1.13", features = [
    "http1",
    "http2",
    "server-auto",
    "server-graceful",
    "tokio",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
futures = { version = "0.3.0", default-features = false, features = ["std"] }
tower = { version = "0.5.2", default-features = false, features = ["limit"] }
tokio-test = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3.19"
pretty_env_logger = "0.5"

[target.'cfg(target_os = "linux")'.dev-dependencies]
libc = "0.2.173"

[lib]
doctest = false

[[test]]
name = "cookie"
path = "tests/cookie.rs"
required-features = ["cookies"]

[[test]]
name = "gzip"
path = "tests/gzip.rs"
required-features = ["gzip", "stream"]

[[test]]
name = "brotli"
path = "tests/brotli.rs"
required-features = ["brotli", "stream"]

[[test]]
name = "zstd"
path = "tests/zstd.rs"
required-features = ["zstd", "stream"]

[[test]]
name = "deflate"
path = "tests/deflate.rs"
required-features = ["deflate", "stream"]

[[test]]
name = "multipart"
path = "tests/multipart.rs"
required-features = ["multipart", "stream"]

[[example]]
name = "json_dynamic"
path = "examples/json_dynamic.rs"
required-features = ["json"]

[[example]]
name = "json_typed"
path = "examples/json_typed.rs"
required-features = ["json"]

[[example]]
name = "tor_socks"
path = "examples/tor_socks.rs"
required-features = ["socks"]

[[example]]
name = "form"
path = "examples/form.rs"

[[example]]
name = "emulation_firefox"
path = "examples/emulation_firefox.rs"
required-features = ["gzip", "brotli", "zstd", "deflate", "tracing"]

[[example]]
name = "emulation_twitter"
path = "examples/emulation_twitter.rs"
required-features = ["gzip", "brotli", "zstd", "deflate", "tracing"]

[[example]]
name = "cert_store"
path = "examples/cert_store.rs"
required-features = ["webpki-roots", "tracing"]

[[example]]
name = "request_with_redirect"
path = "examples/request_with_redirect.rs"
required-features = ["tracing"]

[[example]]
name = "request_with_version"
path = "examples/request_with_version.rs"
required-features = ["tracing"]

[[example]]
name = "request_with_proxy"
path = "examples/request_with_proxy.rs"
required-features = ["socks", "tracing"]

[[example]]
name = "request_with_emulation"
path = "examples/request_with_emulation.rs"
required-features = ["gzip", "brotli", "zstd", "deflate", "tracing"]

[[example]]
name = "connect_via_lower_priority_tokio_runtime"
path = "examples/connect_via_lower_priority_tokio_runtime.rs"
required-features = ["tracing"]

[[example]]
name = "request_with_local_address"
path = "examples/request_with_local_address.rs"
required-features = ["tracing"]

[[example]]
name = "request_with_interface"
path = "examples/request_with_interface.rs"
required-features = ["tracing"]

[[example]]
name = "http1_websocket"
path = "examples/http1_websocket.rs"
required-features = ["ws", "futures-util/std", "tracing"]

[[example]]
name = "http2_websocket"
path = "examples/http2_websocket.rs"
required-features = ["ws", "futures-util/std", "tracing"]

[[example]]
name = "keylog"
path = "examples/keylog.rs"
