[package]
name = "wreq"
version = "6.0.0-rc.22"
description = "An ergonomic Rust HTTP Client with TLS fingerprint"
keywords = ["http", "client", "websocket", "ja3", "ja4"]
categories = ["web-programming::http-client"]
repository = "https://github.com/0x676e67/wreq"
documentation = "https://docs.rs/wreq"
authors = ["0x676e67 <gngppz@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85"
include = ["README.md", "Cargo.toml", "LICENSE", "src/**/*.rs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["webpki-roots"]

# Enable support for decoding text.
charset = ["dep:encoding_rs", "dep:mime"]

# Enable cookies store support.
cookies = ["dep:cookie"]

# Enable gzip compression support.
gzip = ["tower-http/decompression-gzip"]

# Enable Brotli compression support.
brotli = ["tower-http/decompression-br"]

# Enable Zstandard compression support.
zstd = ["tower-http/decompression-zstd"]

# Enable deflate compression support.
deflate = ["tower-http/decompression-deflate"]

# Enable JSON support.
json = ["dep:serde_json"]

# Enable multipart/form-data support.
multipart = ["dep:mime_guess", "dep:sync_wrapper"]

# Enable hickory DNS resolver.
hickory-dns = ["dep:hickory-resolver"]

# Enable streaming support.
stream = ["tokio/fs", "dep:tokio-util", "dep:sync_wrapper"]

# Enable SOCKS proxy support.
socks = ["dep:tokio-socks"]

# Enable WebSocket support.
ws = ["dep:tokio-tungstenite"]

# Enable webpki-roots for TLS certificate validation.
webpki-roots = ["dep:webpki-root-certs"]

# Use the system's proxy configuration.
system-proxy = ["dep:system-configuration", "dep:windows-registry"]

# Enable tracing logging.
tracing = ["http2/tracing", "dep:tracing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
percent-encoding = "2.3.2"
iri-string = "0.7.9"
tower = { version = "0.5.2", default-features = false, features = [
    "timeout",
    "util",
    "retry",
] }
bytes = "1.10.1"
http = "1.3.1"
http2 = { version = "0.5.7", features = ["unstable"] }
httparse = "1.10.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
futures-channel = "0.3.31"
futures-util = { version = "0.3.31", default-features = false }
pin-project-lite = "0.2.16"
smallvec = { version = "1.15.1", features = ["const_generics", "const_new"] }
want = "0.3.1"
socket2 = { version = "0.6.1", features = ["all"] }
ipnet = "2.11.0"
schnellru = { version = "0.2.4", default-features = false }
ahash = { version = "0.8.12", default-features = false }
boring2 = { version = "5.0.0-alpha.10", features = ["pq-experimental"] }
tokio-boring2 = { version = "5.0.0-alpha.10", features = ["pq-experimental"] }
brotli = "8.0.2"
flate2 = "1.1.2"
zstd = "0.13.3"
tokio = { version = "1.48.0", default-features = false, features = [
    "net",
    "time",
    "rt",
] }

# Optional deps...

## json
serde_json = { version = "1.0", optional = true }

## multipart
mime_guess = { version = "2.0", default-features = false, optional = true }

## charset
encoding_rs = { version = "0.8", optional = true }
mime = { version = "0.3.17", optional = true }

## sync wrapper
sync_wrapper = { version = "1.0.2", features = ["futures"], optional = true }

## webpki root certs
webpki-root-certs = { version = "1.0.2", optional = true }

## cookies
cookie = { version = "0.18", optional = true }

## tower http
tower-http = { version = "0.6.7", default-features = false, optional = true }

## tokio util
tokio-util = { version = "0.7.17", default-features = false, optional = true }

## socks
tokio-socks = { version = "0.5.2", optional = true }

## websocket
tokio-tungstenite = { version = "0.28.0", default-features = false, features = [
    "handshake",
], optional = true }

## hickory-dns
hickory-resolver = { version = "0.25.2", optional = true }

## tracing
tracing = { version = "0.1", default-features = false, features = [
    "std",
], optional = true }

## windows system proxy
[target.'cfg(windows)'.dependencies]
windows-registry = { version = "0.6.0", optional = true }

## macOS system proxy
[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = { version = "0.6.1", optional = true }

## interface binding
[target.'cfg(unix)'.dependencies]
libc = "0.2.173"

[dev-dependencies]
hyper = { version = "1.7.0", default-features = false, features = [
    "http1",
    "http2",
    "server",
] }
hyper-util = { version = "0.1.16", features = [
    "http1",
    "http2",
    "server-auto",
    "server-graceful",
    "tokio",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
futures = { version = "0.3.0", default-features = false, features = ["std"] }
tower = { version = "0.5.2", default-features = false, features = ["limit"] }
tokio-test = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3.20"
pretty_env_logger = "0.5"

[[test]]
name = "cookie"
path = "tests/cookie.rs"
required-features = ["cookies"]

[[test]]
name = "gzip"
path = "tests/gzip.rs"
required-features = ["gzip", "stream"]

[[test]]
name = "brotli"
path = "tests/brotli.rs"
required-features = ["brotli", "stream"]

[[test]]
name = "zstd"
path = "tests/zstd.rs"
required-features = ["zstd", "stream"]

[[test]]
name = "deflate"
path = "tests/deflate.rs"
required-features = ["deflate", "stream"]

[[test]]
name = "multipart"
path = "tests/multipart.rs"
required-features = ["multipart", "stream"]

[[test]]
name = "retry"
path = "tests/retry.rs"

[[example]]
name = "json_dynamic"
path = "examples/json_dynamic.rs"
required-features = ["json"]

[[example]]
name = "json_typed"
path = "examples/json_typed.rs"
required-features = ["json"]

[[example]]
name = "tor_socks"
path = "examples/tor_socks.rs"
required-features = ["socks"]

[[example]]
name = "form"
path = "examples/form.rs"

[[example]]
name = "connect_via_lower_priority_tokio_runtime"
path = "examples/connect_via_lower_priority_tokio_runtime.rs"
required-features = ["tracing"]

[[example]]
name = "emulation"
path = "examples/emulation.rs"
required-features = ["gzip", "brotli", "zstd", "deflate", "tracing"]

[[example]]
name = "cert_store"
path = "examples/cert_store.rs"
required-features = ["webpki-roots"]

[[example]]
name = "request_with_redirect"
path = "examples/request_with_redirect.rs"

[[example]]
name = "request_with_version"
path = "examples/request_with_version.rs"

[[example]]
name = "request_with_proxy"
path = "examples/request_with_proxy.rs"
required-features = ["socks"]

[[example]]
name = "request_with_emulation"
path = "examples/request_with_emulation.rs"
required-features = ["gzip", "brotli", "zstd", "deflate", "tracing"]

[[example]]
name = "request_with_local_address"
path = "examples/request_with_local_address.rs"

[[example]]
name = "request_with_interface"
path = "examples/request_with_interface.rs"

[[example]]
name = "http1_websocket"
path = "examples/http1_websocket.rs"
required-features = ["ws", "futures-util/std"]

[[example]]
name = "http2_websocket"
path = "examples/http2_websocket.rs"
required-features = ["ws", "futures-util/std"]

[[example]]
name = "keylog"
path = "examples/keylog.rs"

[[example]]
name = "unix_socket"
path = "examples/unix_socket.rs"
